# hlcg

./: CMakeLists.txt  README.md  hlcg.cpp  hlcg.hpp
assembly/: assembly.cpp  assembly.hpp  build.hpp  error.hpp  readme.md
node/: description.cpp  description.hpp  function.hpp  integer.hpp  module.cpp  module.hpp  node.hpp  readme.md  select.cpp  select.hpp  template.cpp  template.hpp  type.hpp  value.hpp
plugin/: manager.hpp  plugin.hpp  readme.md
test/: main.cpp
utility/: signals.hpp  signals.hxx
